# Automated-Exam-Seating-System

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp  student.cpp  student.hpp
.github/: pull_request_template.md
docs/: info.md  run.md
include/: Hall.h  HallManager.h  Room.h  SeatCodeUtils.h  Venue.h  student.hpp
src/: Hall.cpp  HallManager.cpp  Room.cpp  SeatCodeUtils.cpp  Venue.cpp  main.cpp
